Fixed weird whitespace on right side of page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,7 +8,7 @@ body {
 }
 
 .spg-content {
-  padding: 16% 8% 200px 8%;
+  padding: 16% 0 200px 0;
 }
 
 .spg-footer {
